--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite --port 3000",
     "build": "vite build && tsc",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "machine-translate": "inlang machine translate --project project.inlang"
   },
   "dependencies": {
     "@heroui/react": "3.0.0-beta.5",
@@ -33,6 +34,8 @@
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0"
+    "web-vitals": "^5.1.0",
+    "@inlang/paraglide-js": "^2.9.1",
+    "@inlang/cli": "^3.0.0"
   }
 }
