--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "@inlang/cli": "^3.0.0",
+    "@inlang/paraglide-js": "^2.9.1",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -34,8 +36,6 @@
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0",
-    "@inlang/paraglide-js": "^2.9.1",
-    "@inlang/cli": "^3.0.0"
+    "web-vitals": "^5.1.0"
   }
 }
