--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
-  "baseLocale": "pt-BR",
-  "locales": ["pt-BR", "en"],
+  "baseLocale": "pt-br",
+  "locales": ["en", "pt-br"],
   "modules": [
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format@4/dist/index.js",
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@2/dist/index.js"
