--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "bia-radar-app",
   "private": true,
+  "version": "0.0.1",
   "type": "module",
+  "homepage": "https://use-bia.github.io/bia-radar-app/",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build && tsc",
     "preview": "vite preview",
     "test": "vitest run",
-    "machine-translate": "inlang machine translate --project project.inlang"
+    "machine-translate": "inlang machine translate --project project.inlang",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@heroui/react": "3.0.0-beta.5",
@@ -33,6 +36,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "gh-pages": "^6.3.0",
     "jsdom": "^27.0.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
