--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@vitejs/plugin-react": "^5.0.4",
     "gh-pages": "^6.3.0",
     "jsdom": "^27.0.0",
+    "shx": "^0.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
+    "vite-plugin-static-copy": "^3.2.0",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
   }
