added basic pwa support

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "test": "vitest run",
     "machine-translate": "inlang machine translate --project project.inlang",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "@heroui/react": "3.0.0-beta.5",
@@ -35,12 +36,14 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@vite-pwa/assets-generator": "^1.0.2",
     "@vitejs/plugin-react": "^5.0.4",
     "gh-pages": "^6.3.0",
     "jsdom": "^27.0.0",
     "shx": "^0.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-static-copy": "^3.2.0",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
