--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.545.0",
+    "pwa-install-handler": "^2.6.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.0.6"
